--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>와썹 계정관리</title>
+    <title>와썹 계정관리1</title>
     <style>
         body, html {
             margin: 0;
@@ -30,4 +28,3 @@
         <iframe src="http://110.45.203.91/AccountClassic/" frameborder="0" allowfullscreen></iframe>
     </div>
 </body>
-</html>
