--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>와썹 계정관리1</title>
+    <title>와썹 계정관리</title>
     <style>
         body, html {
             margin: 0;
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="http://110.45.203.91/AccountClassic/" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://l2wassub.org/AccountClassic/" frameborder="0" allowfullscreen></iframe>
     </div>
 </body>
 </html>
