--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hide iframe src</title>
+    <title>와썹 계정관리</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            max-width: 100%;
+            height: 100%;
+            margin: auto;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <iframe id="myIframe" frameborder="0" allowfullscreen=""></iframe>
-
-    <script>
-        document.getElementById('myIframe').src = 'https://l2wassub.org/AccountClassic/';
-    </script>
+    <div class="iframe-container">
+        <iframe src="https://l2wassub.org/AccountClassic/" frameborder="0" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
